--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "Daniel",
   "dependencies": {
-    "@types/react-helmet": "^6.1.0",
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-feed": "^2.5.13",
@@ -31,6 +30,8 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-helmet": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
